Actualizar configuración de Docker y mejorar la documentación sobre la ejecución local de la imagen. Eliminar archivos de respaldo de la base de datos.

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,4 +1,24 @@
-.venv
+__pycache__/
+.venv/
+.pytest_cache/
+.mypy_cache/
+.ruff_cache/
+.git/
+.github/
+env/
+venv/
+build/
+dist/
+*.egg-info
+*.pyc
+*.pyo
+*.pyd
+*.log
+*.sqlite
+jugadores.db
+*.bak
+node_modules/
+/*.env.venv
 __pycache__
 *.pyc
 *.pyo
